--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{%extends layout.html%}
+{%extends "layout.html"%}
 
 {%block nav%}
     <a class="active"><div><p>F1 Telemetry</p></div> </a>
@@ -35,4 +35,5 @@
     <div>
         Your telemetry goes here
     </div>
-        
+
+{%endblock%}
