Added classes for CSS

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,8 @@
 {%extends "layout.html"%}
 
 {%block nav%}
-    <a class="active"><div><p>F1 Telemetry</p></div> </a>
-    <a class="passive"><div>About</div></a>
+    <a class="passive"><div class="button"><p>F1 Telemetry</p></div> </a>
+    <a class="active"><div class="button">About</div></a>
 {%endblock%}
 
 {%block main%}
