--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,14 +12,14 @@
         <title>F1 Telemetry</title>
     </head>
     <body>
-        <nav>
+        <nav class="navigation">
             {%block nav%}{%endblock%}
         </nav>
-        <main>
+        <main class="main">
             {%block main%}{%endblock%}
         </main>
-        <footer>
-            <p>Data collected from <a href="https://theoehrly.github.io/Fast-F1/">fastf1</a></p>
+        <footer class="foot">
+            <p class="small_text">Data collected from <a href="https://theoehrly.github.io/Fast-F1/">fastf1</a></p>
         </footer>
     </body>
 </html>
