--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
 
         <!-- Using bootstrap for this project -->
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
-        <link href="/static/styles.css" rel="stylesheet"> Implement this after HTML is ready
+        <link href="../static/styles.css" rel="stylesheet">
         
         <title>F1 Telemetry</title>
     </head>
