--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,9 @@
 {%extends "layout.html"%}
-
 {%block nav%}
-    <a class="passive"><div class="button"><p>F1 Telemetry</p></div> </a>
-    <a class="active"><div class="button">About</div></a>
+    <nav>    
+        <a href="home.html" class="btn btn-primary" role="button"><div class="button"><p>F1 Telemetry</p></div> </a>
+        <a href="home.html" class="btn btn-primary active"><div class="button">About</div></a>
+    </nav>
 {%endblock%}
 
 {%block main%}
