--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
         <title>F1 Telemetry</title>
     </head>
     <body>
-        <nav class="navigation">
+        <nav class="navbar navbar-light bg-light navigation">
             {%block nav%}{%endblock%}
         </nav>
         <main class="main">
