--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,8 @@
 {%extends "layout.html"%}
 {%block nav%}
     <nav>    
-        <a href="home.html" class="btn btn-primary" role="button"><div class="button"><p>F1 Telemetry</p></div> </a>
-        <a href="home.html" class="btn btn-primary active"><div class="button">About</div></a>
+        <a href="/" class="btn btn-primary passive" role="button"><div class="button"><p>F1 Telemetry</p></div> </a>
+        <a href="/about" class="btn btn-primary alive"><div class="button">About</div></a>
     </nav>
 {%endblock%}
 
