--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,24 @@
-html {
-    background-color: #00063d;
+@import url(//db.onlinewebfonts.com/c/08b281ff157d075664adaf90d73131fe?family=F1);
+@font-face {font-family: "F1"; src: url("//db.onlinewebfonts.com/t/08b281ff157d075664adaf90d73131fe.eot"); 
+    src: url("//db.onlinewebfonts.com/t/08b281ff157d075664adaf90d73131fe.eot?#iefix") format("embedded-opentype"),
+    url("//db.onlinewebfonts.com/t/08b281ff157d075664adaf90d73131fe.woff2") format("woff2"), 
+    url("//db.onlinewebfonts.com/t/08b281ff157d075664adaf90d73131fe.woff") format("woff"), 
+    url("//db.onlinewebfonts.com/t/08b281ff157d075664adaf90d73131fe.ttf") format("truetype"), 
+    url("//db.onlinewebfonts.com/t/08b281ff157d075664adaf90d73131fe.svg#F1") format("svg"); }
+html, body{
+    background-color: #000957;
+    color: white;
+    font-family: "F1";
+}
+
+nav {
+    background-color: #000735;
+}
+
+.alive {
+    /* background-color: #7dff49; */
+}
+
+.passive {
+    /* background-color: #5bdd27; */
 }
