--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {%extends "layout.html"%}
 {%block nav%}
 <nav>
-    <a href="/" class="btn btn-primary active"><div><p>F1 Telemetry</p></div> </a>
-    <a href="/about" class="btn btn-primary passive"><div>About</div></a>
+    <a href="/" class="btn btn-primary alive"><div><p>F1 Telemetry</p></div> </a>
+    <a href="/about" class="btn btn-primary about passive"><div>About</div></a>
 </nav>
     {%endblock%}
 
