--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,17 +9,18 @@
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <link href="../static/styles.css" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
+        <link href="//db.onlinewebfonts.com/c/08b281ff157d075664adaf90d73131fe?family=F1" rel="stylesheet" type="text/css"/>
         
         <title>F1 Telemetry</title>
     </head>
     <body>
-        <nav class="navbar navbar-light bg-light navigation">
+        <nav class="navbar">
             {%block nav%}{%endblock%}
         </nav>
         <main class="main">
             {%block main%}{%endblock%}
         </main>
-        <footer class="foot">
+        <footer class="mb-5 small text-center text-muted">
             <p class="small_text">Data collected from <a href="https://theoehrly.github.io/Fast-F1/">fastf1</a></p>
         </footer>
     </body>
