--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,18 @@
 {%extends "layout.html"%}
 {%block nav%}
-    <nav>    
-        <a href="/" class="btn btn-primary passive" role="button"><div class="button"><p>F1 Telemetry</p></div> </a>
-        <a href="/about" class="btn btn-primary alive"><div class="button">About</div></a>
-    </nav>
+
+        <a href="/" class="passive navlink" role="button">F1 Telemetry</a>
+        <a href="/about" class="alive navlink">About</a>
+
 {%endblock%}
 
 {%block main%}
-    <p>Insert information about how the page works</p>
+    <h1 class="about">Hi! Welcome to this mistake of a website!</h1>
+    <div class="info">
+    <p>This project is made after completing Harvard's CS50 course. The intention is to make a bot that takes my telemetry data
+        (recorded through a simple system I made myself) and then upload it to this site, then it will compare my data with that of an
+        F1 driver. I am sure that that will be a close contest and this exercise will do wonders for my self esteem when it comes to 
+        racing games.
+    </p>
+    </div>
 {%endblock%}
