--- a/static/styles.css
+++ b/static/styles.css
@@ -45,7 +45,7 @@ nav {
 }
 
 .telemetry {
-    border-style: solid;
+    /* border-style: solid; */
     margin: 10px;
     height: 500px;
 }
@@ -61,6 +61,7 @@ nav {
 
 h1 {
     font-family: 'Audiowide', cursive;
+    text-align: center;
 }
 
 .navlink:hover {
