--- a/templates/index.html
+++ b/templates/index.html
@@ -76,18 +76,21 @@
         <h1> Session: {{event}}</h1>
         <h1> Driver: {{driver}}</h1>
     </div>
+    <br>
+    <h1 class="top"> {{driver}}'s Telemetry</h1>
     <div class="driver_telemetry telemetry">
         <img src="static\racertelemetry.jpg" alt="Driver telemetry goes here">
     </div>
-{%endif%}
-
-{% if status1 %}
-    <!-- Only add the below div if you have your own telemetry -->
+    
+    
+<!-- Only add the below div if you have your own telemetry -->
+    <br>
+    <h1 class="top"> Your Telemetry</h1>
     <div class="user_telemetry telemetry">
-        <img src="C:\Users\navjo\Desktop\CS50FinalProject\static\usertelemetry.jpeg" alt="Your telemetry goes here">
+        <img src="static\usertelemetry.jpg" alt="Your telemetry goes here">
     </div>
-{% endif %}
 
+{%endif%}
     
 
 {%endblock%}
